appId: com.infinite.netsfere
---
- launchApp:
    clearState: false
- runFlow:
    when:
      visible: "Login"
    commands:
      - tapOn: "Login"
      - tapOn:
          id: "com.infinite.netsfere:id/email_text"
      - inputText: "debug@sanu.netsferetest.org"
      - tapOn: "CONTINUE"
